Update table view's separator color to black

--- a/GM Exercise/Base.lproj/Main.storyboard
+++ b/GM Exercise/Base.lproj/Main.storyboard
@@ -14,6 +14,7 @@
                         <rect key="frame" x="0.0" y="0.0" width="414" height="896"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <color key="backgroundColor" white="0.0" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                        <color key="separatorColor" white="0.0" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                         <prototypes>
                             <tableViewCell clipsSubviews="YES" contentMode="scaleToFill" preservesSuperviewLayoutMargins="YES" selectionStyle="default" indentationWidth="10" reuseIdentifier="CommitCell" rowHeight="135" id="3ud-a0-8xf" customClass="CommitCell" customModule="GM_Exercise" customModuleProvider="target">
                                 <rect key="frame" x="0.0" y="28" width="414" height="135"/>
